--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/19/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (0.027)</td>
+        <td class="data">29.940 inHg (0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">48%</td>
+        <td class="data">49%</td>
       </tr>
     </tbody>
   </table>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:47:06 AM</td>
+          <td class="data">06:47:52 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:07:21 PM</td>
+          <td class="data">07:05:53 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:15:01 PM">
-            90.6</span><br/>
-          <span title="11:57:44 PM">
-            61.5</span>
+          <span title="12:00:04 AM">
+            61.5</span><br/>
+          <span title="12:03:24 AM">
+            61.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:15:01 PM" class="hival">
-            90.6</span>
+          <span title="12:00:04 AM" class="hival">
+            61.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="11:57:44 PM" class="loval">
-            61.5</span>
+          <span title="12:03:24 AM" class="loval">
+            61.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:54:31 AM">
-            57.4</span><br/>
-          <span title="03:29:31 PM">
-            48.2</span>
+          <span title="12:00:04 AM">
+            54.6</span><br/>
+          <span title="12:03:24 AM">
+            54.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:54:31 AM (Friday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="11:51:44 PM">
+          <span title="12:00:04 AM">
             78</span><br/>
-          <span title="03:29:27 PM">
-            25</span>
+          <span title="12:00:04 AM">
+            78</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:31:01 AM">
-            29.968</span><br/>
-          <span title="05:10:01 PM">
-            29.837</span>
+          <span title="12:00:04 AM">
+            29.942</span><br/>
+          <span title="12:04:00 AM">
+            29.939</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:41:00 PM">
-            23</span><br/>
-          180
+          <span title="12:02:30 AM">
+            7</span><br/>
+          294
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          5</td>
+          4</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          327
+          3<br/>
+          320
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:35:02 PM">
-            85.1</span><br/>
-          <span title="04:25:00 AM">
-            73.8</span>
+          <span title="12:00:04 AM">
+            74.7</span><br/>
+          <span title="12:03:00 AM">
+            74.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:35:02 PM (Friday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:46:01 AM">
-            50</span><br/>
-          <span title="06:12:02 PM">
-            37</span>
+          <span title="12:03:00 AM">
+            49</span><br/>
+          <span title="12:00:04 AM">
+            48</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:46:01 AM (Friday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 9 hours, 12 minutes</td>
+      <td class="data">17 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 9 hours, 12 minutes</td>
+      <td class="data">17 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
