--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/19/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.6<br/>
-            <span class="timestamp">02:15:01 PM</span><br/>
-            61.5<br/>
-            <span class="timestamp">11:57:44 PM</span>
+          <td class="data new_row">61.5<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            61.4<br/>
+            <span class="timestamp">12:03:24 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.6<br/>
-            <span class="timestamp">02:15:01 PM</span>
+          <td class="data new_row">61.5<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">61.5<br/>
-            <span class="timestamp">11:57:44 PM</span>
+          <td class="data new_row">61.4<br/>
+            <span class="timestamp">12:03:24 AM</span>
           </td>
           <td class="data new_row">46.1<br/>
             <span class="timestamp">06:54:23 AM (Wednesday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">57.4<br/>
-            <span class="timestamp">09:54:31 AM</span><br/>
-            48.2<br/>
-            <span class="timestamp">03:29:31 PM</span>
+          <td class="data new_row">54.6<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            54.5<br/>
+            <span class="timestamp">12:03:24 AM</span>
           </td>
           <td class="data new_row">57.4<br/>
             <span class="timestamp">09:54:31 AM (Friday)</span><br/>
@@ -181,9 +181,9 @@
           <td class="label">Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">78<br/>
-            <span class="timestamp">11:51:44 PM</span><br/>
-            25<br/>
-            <span class="timestamp">03:29:27 PM</span>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            78<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.968<br/>
-            <span class="timestamp">09:31:01 AM</span><br/>
-            29.837<br/>
-            <span class="timestamp">05:10:01 PM</span>
+          <td class="data new_row">29.942<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            29.939<br/>
+            <span class="timestamp">12:04:00 AM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            23<br/>
-            180<br/>
-            <span class="timestamp">04:41:00 PM</span>
+            7<br/>
+            294<br/>
+            <span class="timestamp">12:02:30 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">5</td>
+          <td class="data new_row">4</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            1<br/>
-            327
+            3<br/>
+            320
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            85.1<br/>
-            <span class="timestamp">06:35:02 PM</span><br/>
-            73.8<br/>
-            <span class="timestamp">04:25:00 AM</span>
+            74.7<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            74.6<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">
             85.1<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            50<br/>
-            <span class="timestamp">07:46:01 AM</span><br/>
-            37<br/>
-            <span class="timestamp">06:12:02 PM</span>
+            49<br/>
+            <span class="timestamp">12:03:00 AM</span><br/>
+            48<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
             50<br/>
