--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/19/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.5&#176;F</td>
+        <td class="data">61.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.5&#176;F</td>
+        <td class="data">61.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.5&#176;F</td>
+        <td class="data">61.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.6&#176;F</td>
+        <td class="data">54.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">78%</td>
+        <td class="data">79%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.938 inHg (0.022)</td>
+        <td class="data">29.938 inHg (0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">3 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.4&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">49%</td>
+        <td class="data">50%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="12:03:24 AM">
-            61.4</span>
+          <span title="12:13:08 AM">
+            61.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:24 AM" class="loval">
-            61.4</span>
+          <span title="12:13:08 AM" class="loval">
+            61.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             74.7</span><br/>
-          <span title="12:08:00 AM">
-            74.4</span>
+          <span title="12:13:00 AM">
+            74.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:35:02 PM (Friday)">
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:00 AM">
-            49</span><br/>
+          <span title="12:11:00 AM">
+            50</span><br/>
           <span title="12:00:04 AM">
             48</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">81%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 9 hours, 22 minutes</td>
+      <td class="data">17 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 9 hours, 22 minutes</td>
+      <td class="data">17 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
