--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 12:34:00 AM</p>
+    <p class="lastupdate">09/19/2020 12:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,11 +62,11 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.7&#176;F</td>
+        <td class="data">55.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">80%</td>
+        <td class="data">81%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">5 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.8&#176;F</td>
+        <td class="data">74.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:25:02 AM">
+          <span title="12:37:50 AM">
             55.0</span><br/>
           <span title="12:30:54 AM">
             54.3</span>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:25:02 AM">
-            80</span><br/>
+          <span title="12:37:50 AM">
+            81</span><br/>
           <span title="12:00:04 AM">
             78</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           3<br/>
-          330
+          331
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 9 hours, 47 minutes</td>
+      <td class="data">17 days, 9 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 9 hours, 47 minutes</td>
+      <td class="data">17 days, 9 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
