--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 12:49:00 AM</p>
+    <p class="lastupdate">09/19/2020 12:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.6&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.6&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.6&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.7&#176;F</td>
+        <td class="data">54.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.936 inHg (0.016)</td>
+        <td class="data">29.937 inHg (0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NE (45&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">74.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="12:46:26 AM">
-            60.6</span>
+          <span title="12:50:02 AM">
+            60.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:46:26 AM" class="loval">
-            60.6</span>
+          <span title="12:50:02 AM" class="loval">
+            60.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          3<br/>
-          338
+          2<br/>
+          340
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 10 hours, 2 minutes</td>
+      <td class="data">17 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 10 hours, 2 minutes</td>
+      <td class="data">17 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
