--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 01:04:00 AM</p>
+    <p class="lastupdate">09/19/2020 01:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.938 inHg (0.013)</td>
+        <td class="data">29.939 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">75.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">49%</td>
+        <td class="data">48%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="01:03:00 AM">
-            60.2</span>
+          <span title="01:08:08 AM">
+            60.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:03:00 AM" class="loval">
-            60.2</span>
+          <span title="01:08:08 AM" class="loval">
+            60.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          345
+          347
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:04:00 AM">
-            74.8</span><br/>
+          <span title="01:08:00 AM">
+            75.0</span><br/>
           <span title="12:29:00 AM">
             73.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 10 hours, 17 minutes</td>
+      <td class="data">17 days, 10 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 10 hours, 17 minutes</td>
+      <td class="data">17 days, 10 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
